fixing minor issues

--- a/templates/owncloud-config.php.j2
+++ b/templates/owncloud-config.php.j2
@@ -65,6 +65,13 @@ $CONFIG = array (
       'url' => '/apps-appstore',
       'writable' => true,
     ),
+    2 =>
+    array (
+      'path' => '/var/www/owncloud/apps',
+      'url' => '/apps-local',
+      'writable' => false,
+    ),
+
   ),
   'customclient_desktop' => '',
   'customclient_android' => '',
