recording changes for nextcloud

--- a/templates/httpd_vhost.conf.j2
+++ b/templates/httpd_vhost.conf.j2
@@ -7,7 +7,7 @@
 
 	ServerName {{ host_name }}:443
 
-	Include conf.d/owncloud.conf
+	# Include conf.d/owncloud.conf
 
 	ErrorLog logs/owncloud_ssl_error_log
 	TransferLog logs/owncloud_ssl_access_log
